# benchmark_invprob_largescale

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: docs.yml  lint.yml  main.yml  site.yml
benchmark_inference/: objective.py
benchmark_inference/configs/: config_parallel.yml  highres_imaging.yml  highres_imaging_torchrun_perso.yml  multiframe_superres.yml  radio_config.yaml  radio_interferometry.yml  radio_prepare_test_config.yaml  simulated.yml  tomography_2d.yml  tomography_3d.yml
benchmark_inference/datasets/: multiframe_superres.py  radio_interferometry.py  radio_prepare_test.py  simulated.py  tomography_2d.py  tomography_3d.py
benchmark_inference/install_scripts/: install_radio.sh  install_radio_test.sh
benchmark_inference/solvers/: denoiser.py  pnp.py
benchmark_training/: objective.py
benchmark_training/configs/: config_parallel.yml  config_parallel_nsys.yml  synthetic_unrolled.yml  synthetic_unrolled_local.yml
benchmark_training/datasets/: synthetic.py
benchmark_training/solvers/: unrolled_pnp.py
benchmark_workflows/configs/: config_parallel.yml  radio_interferometry.yml  simulated.yml
benchmark_workflows/datasets/: radio_interferometry.py
benchmark_workflows/solvers/: pnp_stream.py
demos/demo_cryo/: main.py
docs/source/: conf.py  index.rst  troubleshooting.rst
site/: astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
tests/: test_datasets.py  test_invprob.py  test_profiler.py  test_radio_interferometry_data.py  test_solver.py  test_website_visualization.py
(+145 files in other folders)
